--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                 <div class="md:w-1/2 flex justify-center">
                     <div class="relative">
                         <div class="w-72 h-72 md:w-80 md:h-80 rounded-full overflow-hidden border-8 border-white shadow-2xl floating-element">
-                            <img src="./IMG_20241213_063301.jpg" alt="Tuyishime Martin" class="w-full h-full object-cover">
+                            <img src="/IMG_20241213_063301.jpg" alt="Tuyishime Martin" class="w-full h-full object-cover">
                         </div>
                         <div class="absolute -bottom-4 -right-4 bg-gradient-to-r from-yellow-400 to-orange-500 text-gray-800 px-6 py-3 rounded-full font-bold shadow-lg">
                             <i class="fas fa-star mr-2"></i> Open to Work
@@ -398,7 +398,7 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-2/5 mb-10 md:mb-0 flex justify-center">
                     <div class="w-72 h-72 rounded-2xl overflow-hidden shadow-2xl border-4 border-white">
-                        <img src="./IMG_20241213_063301.jpg" alt="About Me" class="w-full h-full object-cover">
+                        <img src="/IMG_20241213_063301.jpg" alt="About Me" class="w-full h-full object-cover">
                     </div>
                 </div>
                 
@@ -605,7 +605,7 @@
                 <!-- Project 1 -->
                 <div class="project-card bg-white/80 dark:bg-gray-800/80 rounded-2xl overflow-hidden shadow-lg border border-gray-100 dark:border-gray-700" data-category="ai" data-tags="python tensorflow pytorch typescript tailwind">
                     <div class="h-56 overflow-hidden">
-                        <img src="./mlimi-smart.png" alt="Mlimi Smart" class="w-full h-full object-cover">
+                        <img src="/mlimi-smart.png" alt="Mlimi Smart" class="w-full h-full object-cover">
                     </div>
                     <div class="p-8">
                         <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-4">Mlimi Smart</h3>
@@ -653,7 +653,7 @@
                 <!-- Project 3 -->
                 <div class="project-card bg-white/80 dark:bg-gray-800/80 rounded-2xl overflow-hidden shadow-lg border border-gray-100 dark:border-gray-700" data-category="ai" data-tags="python javascript multilingual">
                     <div class="h-56 overflow-hidden">
-                        <img src="./Virtula_story.png" alt="Virtual Story Generator" class="w-full h-full object-cover">
+                        <img src="/Virtula_story.png" alt="Virtual Story Generator" class="w-full h-full object-cover">
                     </div>
                     <div class="p-8">
                         <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-4">Virtual Story Generator</h3>
